fix: fixed scrollbar colors and variables

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -37,11 +37,10 @@ code {
 }
 
 ::-webkit-scrollbar-track {
-  background: #ffffff;
+  background: $primary;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: $primary-inverted;
   border-radius: 10px;
-  border: 3px solid #ffffff;
 }
